@@ -67,6 +67,11 @@
 #include <sys/time.h>
 #include <sys/resource.h>
 
+/*
+ * libevent api 
+ */
+#include <event.h>
+
 #include <generic_types.h>
 #include <object.h>
 #include <timer.h>
@@ -234,6 +239,11 @@ main(int argc, char **argv)
 	Time            t;
 
 	int             numRates = 0;
+
+	/*
+	 * Initialize libevent 
+	 */
+	event_init();
 
 #ifdef __FreeBSD__
 	/*
@@ -874,7 +884,11 @@ main(int argc, char **argv)
 			       "out"
 #endif
 			       " TIME_SYSCALLS.\n", prog_name);
-			break;
+			printf
+			    ("Using libevent-%s for %s event notification system.\n",
+			     event_get_version(), event_get_method());
+
+			exit(0);
 
 		case 'h':
 			usage();
